[package]
name = "xqlink"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xqlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = { version = "0.5.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"
ndarray = "0.16"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.44", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.9", features = ["cuda", "directml"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.9", features = ["coreml"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.9", features = ["cuda"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "s"
strip = true
